feat: added typeorm configuration and user entities

--- a/authentication/.env.example
+++ b/authentication/.env.example
@@ -1,7 +1,13 @@
+NODE_ENV=development
 APP_PORT=3000
 DEBUG_PORT=9229
 
-DATABASE_HOST=5432
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_DIALECT=postgres
 DATABASE_USER=docker
 DATABASE_PASSWORD=admin
 DATABASE_NAME=authentication
+DATABASE_PARANOID=true
+
+DATABASE_NAME_TEST=authentication_test
