--- a/authentication/package.json
+++ b/authentication/package.json
@@ -1,11 +1,23 @@
 {
+  "scripts": {
+    "dev": "ts-node src/server.ts",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "typeorm:create": "npm run typeorm migration:create -- -n",
+    "typeorm:up": "npm run typeorm -- migration:run",
+    "typeorm:down": "npm run typeorm -- migration:revert"
+  },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.14",
-    "typeorm": "^0.3.17",
+    "typeorm": "^0.2.32",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0"
   }
 }
