--- a/authentication/package.json
+++ b/authentication/package.json
@@ -7,16 +7,20 @@
     "typeorm:down": "npm run typeorm -- migration:revert"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.14",
     "typeorm": "^0.2.32",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0"
   }
