--- a/authentication/package.json
+++ b/authentication/package.json
@@ -1,23 +1,24 @@
 {
   "scripts": {
-    "dev": "ts-node src/server.ts",
+    "dev": "ts-node-dev --files src/app.ts",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "typeorm:create": "npm run typeorm migration:create -- -n",
-    "typeorm:up": "npm run typeorm -- migration:run",
+    "typeorm:up": "npm run typeorm -- -d ./src/modules/database/typeorm/data-source.ts migration:run",
     "typeorm:down": "npm run typeorm -- migration:revert"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcrypt": "5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.14",
-    "typeorm": "^0.2.32",
+    "typeorm": "0.3.11",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcrypt": "5.0.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
