feat: started user api

--- a/authentication/.env.example
+++ b/authentication/.env.example
@@ -1,7 +1,9 @@
+# API
 NODE_ENV=development
 APP_PORT=3000
 DEBUG_PORT=9229
 
+# DATABASE
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_DIALECT=postgres
@@ -11,3 +13,14 @@ DATABASE_NAME=authentication
 DATABASE_PARANOID=true
 
 DATABASE_NAME_TEST=authentication_test
+
+# ECNRYPT
+SALT_ROUNDS=10
+
+
+# JWT
+JWT_SECRET_TOKEN="^z:p+ZS1f^e>(S(ez#!y9Hl;^fL>Zo"
+JWT_EXPIRES_IN_TOKEN="1h"
+JWT_SECRET_REFRESH_TOKEN="Zh;n9x~zi]PuLXt_ycD<oX|=g=m03<"
+JWT_EXPIRES_IN_REFRESH_TOKEN="30d"
+JWT_EXPIRES_REFRESH_TOKEN_DAYS="30"
