feat: added score math

--- a/authentication/.env.example
+++ b/authentication/.env.example
@@ -17,10 +17,14 @@ DATABASE_NAME_TEST=authentication_test
 # ECNRYPT
 SALT_ROUNDS=10
 
-
 # JWT
 JWT_SECRET_TOKEN="^z:p+ZS1f^e>(S(ez#!y9Hl;^fL>Zo"
 JWT_EXPIRES_IN_TOKEN="1h"
 JWT_SECRET_REFRESH_TOKEN="Zh;n9x~zi]PuLXt_ycD<oX|=g=m03<"
 JWT_EXPIRES_IN_REFRESH_TOKEN="30d"
 JWT_EXPIRES_REFRESH_TOKEN_DAYS="30"
+
+# KAFKA
+KAFKA_GROUP_ID='user.producer'
+KAFKA_USER_CREATED_TOPIC='user.created'
+KAFKA_BROKERS='localhost:29092'
