--- a/score/package.json
+++ b/score/package.json
@@ -1,10 +1,18 @@
 {
+  "scripts": {
+    "dev": "ts-node-dev --files src/app.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^5.7.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "ts-node-dev": "^2.0.0"
   }
 }
