--- a/user/docker-compose.yml
+++ b/user/docker-compose.yml
@@ -13,8 +13,10 @@ services:
       - "${DATABASE_PORT}:5432"
     volumes:
       - pgdata:/data/postgres
+    networks:
+      - develop
 
-  app:
+  app2:
     build: .
     container_name: user
     restart: always
@@ -22,7 +24,6 @@ services:
       DATABASE_HOST: database
       DATABASE_PORT: 5432
       APP_PORT: ${APP_PORT}
-      DEBUG_PORT: ${DEBUG_PORT}
     ports:
       - "${APP_PORT}:${APP_PORT}"
     volumes:
@@ -31,7 +32,13 @@ services:
       - database
     depends_on:
       - database
+    networks:
+      - develop
 
 volumes:
   pgdata:
     driver: local
+
+networks:
+  develop:
+    external: true
