feat: added README.md

--- a/score/.env.example
+++ b/score/.env.example
@@ -6,7 +6,12 @@ APP_PORT=3002
 MONGO_INITDB_ROOT_USERNAME=admin
 MONGO_INITDB_ROOT_PASSWORD=admin
 MONGO_INITDB_DATABASE=scoredb
-DATABASE_URL='mongodb://admin:admin@localhost:27017/scoredb?authSource=admin&directConnection=true'
+
+# docker
+DATABASE_URL='mongodb://admin:admin@mongodb:27017/scoredb?authSource=admin&directConnection=true'
+
+# local
+# DATABASE_URL='mongodb://admin:admin@localhost:27017/scoredb?authSource=admin&directConnection=true'
 
 # JWT
 JWT_SECRET_TOKEN="^z:p+ZS1f^e>(S(ez#!y9Hl;^fL>Zo"
