--- a/user/.env.example
+++ b/user/.env.example
@@ -14,3 +14,6 @@ DATABASE_PARANOID=true
 # JWT
 JWT_SECRET_TOKEN="^z:p+ZS1f^e>(S(ez#!y9Hl;^fL>Zo"
 JWT_EXPIRES_IN_TOKEN="1h"
+
+# SCORE API
+SCORE_API_URL='http://app3:3002'
