--- a/authentication/package.json
+++ b/authentication/package.json
@@ -4,13 +4,15 @@
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "typeorm:create": "npm run typeorm migration:create -- -n",
     "typeorm:up": "npm run typeorm -- -d ./src/modules/database/typeorm/data-source.ts migration:run",
-    "typeorm:down": "npm run typeorm -- migration:revert"
+    "typeorm:down": "npm run typeorm -- migration:revert",
+    "test": "jest --runInBand --detectOpenHandles"
   },
   "dependencies": {
     "bcrypt": "5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.14",
@@ -22,6 +24,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "ts-jest": "^29.1.1",
+    "ts-mockito": "^2.6.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0"
   }
